Log-in is successful, just working on routing issues

--- a/petrax-frontend/src/app/log-in/log-in.component.html
+++ b/petrax-frontend/src/app/log-in/log-in.component.html
@@ -23,7 +23,7 @@
 
         <h2>Login Successful</h2>
         <p>Welcome to PETRAX! Please click below to continue.</p>
-        <button (click)="navigateToHome()">Home</button>
+        <button (click)="navigateToHome()">Calendar</button>
     </div>
 </div>
 
