--- a/petrax-frontend/src/app/care-professional/care-professional.component.html
+++ b/petrax-frontend/src/app/care-professional/care-professional.component.html
@@ -1,27 +1,27 @@
-<p>care-professional works!</p>
-<h2> My Care Professionals</h2>
+
 <table class="table table-striped">
     <thead>
-        <tr>
-           <th>Care Type</th>
-           <th>Name</th>
-           <th>Business Name</th>
-           <th>Website</th> 
-           <th>Phone Number</th>
-           <th>Actions</th>
-        </tr>
+      <tr>
+        <th>Professional Information</th>
+        <th>Actions</th>
+      </tr>
     </thead>
     <tbody>
-        <tr *ngFor = "let professional of professionals">
-            <td> {{professional.careType}} </td>
-            <td> {{professional.name}} </td>
-            <td> {{professional.businessName}} </td>
-            <td> {{professional.website}} </td>
-            <td> {{professional.phoneNumber}} </td>
-            <td>
-                <button (click)="updateProfessional(professional.id)" class="btn btn-info">Update</button>
-                <button (click)="deleteProfessional(professional.id)" class="btn btn-danger" style="margin-left: 10px">Delete</button>
-            </td>
-        </tr>
+      <tr *ngFor="let professional of professionals">
+        <td>
+          <div class="professional-info">
+            <p><strong>Care Type:</strong> {{ professional.careType }}</p>
+            <p><strong>Name:</strong> {{ professional.name }}</p>
+            <p><strong>Business Name:</strong> {{ professional.businessName }}</p>
+            <p><strong>Website:</strong> {{ professional.website }}</p>
+            <p><strong>Phone Number:</strong> {{ professional.phoneNumber }}</p>
+          </div>
+        </td>
+        <td>
+          <button (click)="updateProfessional(professional.id)" class="btn btn-info">Update</button>
+          <button (click)="deleteProfessional(professional.id)" class="btn btn-danger" style="margin-top: 10px">Delete</button>
+        </td>
+      </tr>
     </tbody>
-</table>
+  </table>
+  
