still not fully logging in, but almost there

--- a/petrax-frontend/src/app/log-in/log-in.component.html
+++ b/petrax-frontend/src/app/log-in/log-in.component.html
@@ -8,8 +8,8 @@
 
 
 
-            <label for="pwHash">Password</label>
-            <input type="password" id="pwHash" name="pwHash" [(ngModel)]="pwHash" required class="form-control">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" [(ngModel)]="password" required class="form-control">
 
 
             <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
