Json syntax error solved, still not showing login success modal

--- a/petrax-frontend/src/app/log-in/log-in.component.html
+++ b/petrax-frontend/src/app/log-in/log-in.component.html
@@ -3,8 +3,8 @@
         <h2>Login</h2>
         <div class="form-group">
 
-            <label for="email">Email</label>
-            <input type="text" id="email" name="email" [(ngModel)]="email" required class="form-control">
+            <label for="contactEmail">Email</label>
+            <input type="text" id="contactEmail" name="contactEmail" [(ngModel)]="contactEmail" required class="form-control">
 
 
 
