added collapsible menu to nav bar for mobile formats.

--- a/petrax-frontend/src/app/navbar/navbar.component.css
+++ b/petrax-frontend/src/app/navbar/navbar.component.css
@@ -45,3 +45,23 @@
   vertical-align: middle;   /* Vertically center the logo in the navbar */
   margin-right: 20px;   /* Space between the logo and the text */
 }
+
+.mobile-menu{
+    display:none;
+}
+
+@media(max-width: 767px) {
+    .mobile-menu {
+        display: block;
+    }
+    .navbar-item {
+        display: none;
+    }
+    .menu-button {
+        background-color: #F05D23;
+        color:#222E50;
+        border: #F05D23 2.5px solid;
+        border-radius: 50px;
+        font-weight: bold;
+    }
+}
