--- a/petrax-frontend/src/app/faq/faq.component.css
+++ b/petrax-frontend/src/app/faq/faq.component.css
@@ -51,6 +51,9 @@ h1 {
 .faq h2 {
   color: #f05d23;
   margin-bottom: 10px;
+  background-color: #F7F7F2;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 
@@ -81,4 +84,30 @@ h1 {
 .gcse-search {
   text-align: center;
   margin: 20px;
+}
+
+@media (max-width: 768px) {
+  h1{
+    width:60%;
+  }
+  .faq-container{
+    max-width: 100%;
+    justify-content: center;
+  }
+  .faq h2 {
+    text-align: center;
+    
+  }
+  .faq {
+    /* text-align: center; */
+    margin: 5px auto;
+    max-width: 53%;
+    padding-left:10px;
+    background-color: #F7F7F2;
+    border-radius: 5px;
+    /* padding: 5px; */
+  }
+  #answer {
+  font-size:16px;
+  }
 }
