--- a/petrax-frontend/src/app/calendar/calendar.component.css
+++ b/petrax-frontend/src/app/calendar/calendar.component.css
@@ -7,7 +7,8 @@
 .content-container {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  flex-wrap: wrap;
+  align-items: center;
   justify-content: space-between;
   max-width: 1200px; /* Adjust the max-width as needed */
   width: 100%;
@@ -15,16 +16,50 @@
 
 .calendar-container {
   flex: 2;
-  margin-right: 20px; /* Add some space between the calendar and upcoming events */
+  margin-right: 20px;
+  min-width: 300px;
 }
 
 .upcoming-events {
   flex: 1;
+  min-width: 300px;
 }
 
 .event-list-container {
   background-color: #f5f5f5; /* Optional: Add background color to the upcoming events list */
   padding: 10px;
 }
+ul li {
+  list-style-type: none;
+  /* padding:0;
+  margin:0; */
+  text-align: left;
+}
+.event-date{
+  font-weight: bold;
+  margin-right: 5px;
+}
+
 
 /* Add any other styles as needed for your calendar and events list */
+@media (max-width: 768px){
+ 
+  .content-container{
+    flex-direction: column;
+    text-align: center;
+  }
+  .calendar-container{
+    justify-content: center;
+    margin-left: 15px;
+  }
+  .event-list-container {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    
+  }
+  span {
+    text-align: left;
+  }
+  
+}
