--- a/petrax-frontend/src/app/calendar/calendar.component.css
+++ b/petrax-frontend/src/app/calendar/calendar.component.css
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: space-between;
   max-width: 1200px; /* Adjust the max-width as needed */
   width: 100%;
@@ -45,18 +44,23 @@ ul li {
 @media (max-width: 768px){
  
   .content-container{
+    align-items: center;
     flex-direction: column;
-    text-align: center;
+    
   }
   .calendar-container{
     justify-content: center;
     margin-left: 15px;
+  
   }
   .event-list-container {
     margin-top: 10px;
     margin-bottom: 10px;
+    text-align: center; 
+  }
+  .upcoming-events {
+    align-self: center;
     text-align: center;
-    
   }
   span {
     text-align: left;
