--- a/petrax-frontend/src/app/user/user-profile/user-profile.component.html
+++ b/petrax-frontend/src/app/user/user-profile/user-profile.component.html
@@ -16,7 +16,7 @@
                 <app-care-professional class="professional-list"></app-care-professional>
             </div>
             <div>
-                <button (click)="navigateToAddProfessional()">Add New Professional</button>
+                <button class="add-button"(click)="navigateToAddProfessional()">Add New Professional</button>
             </div>
         </div>
     </div>
