--- a/petrax-frontend/src/app/navbar/navbar.component.html
+++ b/petrax-frontend/src/app/navbar/navbar.component.html
@@ -6,5 +6,7 @@
     <a class="navbar-item" routerLink="/faq">FAQ</a>
     <!-- More nav pages can be put here -->
     <!-- User Profile might go where home is, not sure yet -->
+    <a class="navbar-item" href="javascript:void(0)" (click)="onLogout()">Logout</a>
+
   </div>
 </header>
