--- a/petrax-frontend/src/app/register/register.component.html
+++ b/petrax-frontend/src/app/register/register.component.html
@@ -12,11 +12,11 @@
   <label for="contactEmail">Email:</label>
   <input type="email" id="contactEmail" name="contactEmail" [(ngModel)]="contactEmail" required><br>
 
-  <label for="pwHash">Password: *must be at least 6 characters</label>
-  <input type="password" id="pwHash" name="pwHash" [(ngModel)]="pwHash" required><br>
+  <label for="password">Password: *must be at least 6 characters</label>
+  <input type="password" id="password" name="password" [(ngModel)]="password" required><br>
 
-  <label for="pwHashConfirm">Confirm Password:</label>
-  <input type="password" id="pwHashConfirm" name="pwHashConfirm" [(ngModel)]="pwHashConfirm" required><br>
+  <label for="verifyPassword">Confirm Password:</label>
+  <input type="password" id="verifyPassword" name="verifyPassword" [(ngModel)]="verifyPassword" required><br>
 
   <label for="address">Address:</label>
   <input type="text" id="address" name="address" [(ngModel)]="address" required autocomplete="off"><br>
