--- a/src/main/resources/templates/authentication/register.html
+++ b/src/main/resources/templates/authentication/register.html
@@ -22,8 +22,8 @@
   <label for="contactEmail">Email:</label>
   <input type="email" id="contactEmail" name="contactEmail" required><br>
 
-  <label for="pwHash">Password:</label>
-  <input type="text" id="pwHash" name="pwHash" required><br>
+  <label for="password">Password:</label>
+  <input type="text" id="password" name="password" required><br>
 
   <label for="address">Address:</label>
   <input type ="text" id="address" name="address" required><br>
