--- a/petrax-frontend/src/app/pet-profile/add-pet-modal.component.html
+++ b/petrax-frontend/src/app/pet-profile/add-pet-modal.component.html
@@ -53,7 +53,7 @@
 
     <div class="form-group">
       <label for="petAllergy">Allergy</label>
-      <input type="text" class="form-control" id="petAllergy" name="petMedication" [(ngModel)]="newPet.petAllergy" required>
+      <input type="text" class="form-control" id="petAllergy" name="petAllergy" [(ngModel)]="newPet.petAllergy" required>
     </div>
 
     <div class="form-group">
