Tayler -- pet emoji working!

--- a/petrax-frontend/src/app/pet-profile/add-pet-modal.component.html
+++ b/petrax-frontend/src/app/pet-profile/add-pet-modal.component.html
@@ -17,12 +17,12 @@
     <div class="form-group">
       <label for="petType">Pet Type</label>
       <select class="form-control" id="petType" name="petType" [(ngModel)]="newPet.petType" required>
-        <option value="CAT">Cat</option>
-        <option value="DOG">Dog</option>
-        <option value="BIRD">Bird</option>
-        <option value="FISH">Fish</option>
-        <option value="REPTILE">Reptile</option>
-        <option value="OTHER">Other</option>
+        <option value="CAT">CAT</option>
+        <option value="DOG">DOG</option>
+        <option value="BIRD">BIRD</option>
+        <option value="FISH">FISH</option>
+        <option value="REPTILE">REPTILE</option>
+        <option value="OTHER">OTHER</option>
       </select>
     </div>
 
