--- a/petrax-frontend/src/app/landing-page/landing-page.component.css
+++ b/petrax-frontend/src/app/landing-page/landing-page.component.css
@@ -6,8 +6,6 @@ body, html {
     flex-direction: column;
 }
 
-
-
 .main-content {
     flex: 1; /* Let the main content area take all the available space */
     display: flex;
@@ -87,16 +85,20 @@ body, html {
     display: inline-block;
     font-size: 16px;
 }
+.pet-button:hover {
+    background-color: #F05D23;
+    color:#F7F7F2;
+}
 .events-container {
     display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 700px;
-  height: auto;
-  background: #f7f7f2;
-  border-radius: 5px;
-  border: 2.5px #f05d23 solid;
-  margin: 0 auto;
+    flex-direction: column;
+    align-items: center;
+    width: 700px;
+    height: auto;
+    background: #f7f7f2;
+    border-radius: 5px;
+    border: 2.5px #f05d23 solid;
+    margin: 0 auto;
 }
 .events-header{
     text-align: center;
@@ -117,6 +119,15 @@ body, html {
     text-align: center;
     text-decoration: none;
     font-size: 16px;
+}
+.calendar-link:hover{
+    background-color: #F05D23;
+    color:#F7F7F2;
+    text-decoration: none;
+}
+a:hover{
+    background-color: #222E50;
+    color:#F7F7F2;
 }
 .events-list-container {
     flex: 1; /* Allow events list to grow and take available space */
@@ -142,4 +153,55 @@ li{
 .event-date{
     font-weight: bold;
     margin-right: 10px;
+}
+
+@media (max-width:768px){
+    .center-container {
+        align-items: center;
+    }
+    .rectangle {
+        width: 95%;
+        padding: 20px;
+    }
+    h1 {
+        font-size: 25px;
+    }
+    h2 {
+        font-size: 20px;
+        padding:5px;
+    }
+    .pet-card-container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .pet-card {
+        flex: 0 0 calc(50% - 20px); 
+        color: #222E50;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 25px;
+        margin: 10px 5px; 
+        border-radius: 9999px;
+        background: #D9D9D9;
+    }
+
+    .events-container{
+        width:100%
+    }
+    .events-header{
+        width:60%;
+        margin:auto;
+    }
+    .event-list {
+        width: 100%;
+        margin: auto;
+    }
+    .calendar-link{
+        margin: auto;
+        margin-bottom: 5px;
+        padding: 5px 10px;
+    }
 }
