--- a/petrax-frontend/src/app/pet-profile/pet-profile.component.html
+++ b/petrax-frontend/src/app/pet-profile/pet-profile.component.html
@@ -1,17 +1,23 @@
 <div class="app-container">
-  <h1 class="app-heading">PETrax 🐕 🐈 🦜 🦎</h1>
+  <h1 class="app-heading">PETrax 🐈 🐕 🦜 🐠 🐍</h1>
   <div class="content-container">
     <div class="pet-profile-container">
       <h2>Pets</h2>
       <ul>
         <li *ngFor="let pet of pets">
-          <span *ngIf="isPetPresent(pet.petId)" class="petName">{{ pet.petName }}</span>
-          <span class="petEmoji">{{ determineProfilePictureEmoji(pet.petType) }}</span>
-          <button class="view-pet-button" (click)="openPetDetailModal(pet)">Details</button>
-          <button class="delete-pet-button" (click)="openDeletePetModal(pet.petId)">Remove Pet</button>
+          <div class="pet-profile">
+            <div class="pet-profile-image">
+              <span class="petEmoji">{{ determineProfilePictureEmoji(pet.petType) }}</span>
+            </div>
+            <div class="pet-profile-details">
+              <span *ngIf="isPetPresent(pet.petId)" class="petName">{{ pet.petName }}</span>
+              <div class="profile-buttons">
+                <button class="view-pet-button" (click)="openPetDetailModal(pet)">Details</button>
+                <button class="delete-pet-button" (click)="openDeletePetModal(pet.petId)">Remove Pet</button>
+              </div>
+            </div>
+          </div>
         </li>
       </ul>
       <button class="add-pet-button" (click)="openAddPetModal()">Add Pet</button>
     </div>
-  </div>
-</div>
