--- a/petrax-frontend/src/app/pet-profile/pet-profile.component.css
+++ b/petrax-frontend/src/app/pet-profile/pet-profile.component.css
@@ -32,37 +32,42 @@
 }
 
 .pet-details {
-  background-color: #f5f5f5; /* Optional: Add background color to the pet details */
-  padding: 10px;
+  margin-top: 10px;
 }
 
 .pet-profile {
-  display: flex;
-  align-items: center;
   border: 1px solid #ddd;
   padding: 10px;
   margin-bottom: 10px;
 }
 
+.profile-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.pet-profile-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .pet-profile-image {
-  width: 236px;
-  height: 236px;
-  flex-shrink: 0;
-  fill: #222E50;
-  stroke-width: 5px;
-  stroke: #F05D23;
+  margin-bottom: 10px;
 }
 
 .petEmoji {
-  font-size: 36px; /* Adjust the font size as needed */
-  display: inline-block;
-  width: 80px; /* Adjust the width and height as needed for the circular shape */
+  font-size: 48px;
+  width: 80px;
   height: 80px;
-  text-align: center;
   line-height: 80px;
-  border-radius: 50%; /* Creates the circular shape */
-  background-color: #f05d23; /* Set the background color */
-  color: #fff; /* Set the text color */
+  border-radius: 50%;
+  background-color: #f05d23;
+  color: #fff;
+  display: block; /* Center the emoji */
+  margin: 0 auto;
 }
 
 .pet-profile-details {
@@ -77,10 +82,15 @@
 }
 
 .petName {
-width: 525px;
-height: 126px;
-flex-shrink: 0;
-border-radius: 5px;
-border: 3px solid #222E50;
-background: #1BB46F;
+  width: 525px;
+  height: 126px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  border: 3px solid #222E50;
+  background: #1BB46F;
+  font-size: 18px;
+}
+
+.pet-list {
+  list-style-type: none; /* Remove bullet points */
 }
