--- a/petrax-frontend/src/app/pet-profile/pet-profile.component.css
+++ b/petrax-frontend/src/app/pet-profile/pet-profile.component.css
@@ -5,14 +5,13 @@
   flex-direction: column;
   align-items: center;
   width: 1441px;
-  height: 1607px;
   background: #F7F7F2;
 }
 
 .content-container {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
   max-width: 1200px; /* Adjust the max-width as needed */
   width: 100%;
@@ -25,6 +24,8 @@
   height: 1820px;
   flex-shrink: 0;
   background: #B5BAB6;
+  padding: 20px;
+  text-align: center;
 }
 
 .other-content {
@@ -79,6 +80,10 @@
   flex-direction: column;
   align-items: center;
   margin-top: 10px;
+}
+
+.add-pet-button {
+  align: center;
 }
 
 .petName {
