Patch for navbar and non-compile issue

--- a/petrax-frontend/src/app/navbar/navbar.component.html
+++ b/petrax-frontend/src/app/navbar/navbar.component.html
@@ -7,11 +7,10 @@
 
     <!-- For all other pages -->
     <ng-container *ngIf="!onHomePage">
-      <a class="navbar-item" routerLink="/home">Home</a>
+      <a class="navbar-item" routerLink="/welcome">Home</a>
+      <a class="navbar-item" routerLink="/user-profile">My Profile</a>
       <a class="navbar-item" routerLink="/calendar">Calendar</a>
       <a class="navbar-item" routerLink="/faq">FAQ</a>
-      <a class="navbar-item" routerLink="/pet-profile">Pet Profile</a>
-      <a class="navbar-item" routerLink="/my-profile">My Profile</a>
     </ng-container>
   </div>
 </header>
