--- a/petrax-frontend/src/app/log-in/log-in.component.css
+++ b/petrax-frontend/src/app/log-in/log-in.component.css
@@ -1,4 +1,37 @@
 /* Style for the overall container of the login page, which could be a div or the form itself. */
+  .rectangle {
+      width: 800px;
+      max-height: 80%;
+      background: #B5BAB6;
+      padding: 60px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+  }
+
+.center-container {
+    width: 100%; /* take full width of its parent */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1; /* Allow it to grow and consume available space */
+    }
+.Rectangle17 {
+   width: 300px;
+   height: 156px;
+   background: #D9D9D9;
+   border-radius: 10px;
+   border: 2.50px #F05D23 solid;
+   align-items: center;
+}
+.website-graphic {
+  max-width: 100%;  /* to keep the image consistent with your text's width */
+  height: auto;   /* maintain aspect ratio */
+  margin-bottom: 20px;  /* add some space between the graphic and the text */
+  align-items: center;
+}
 .login-container {
   max-width: 400px; /* constraining the form to 400 pixels width. */
   margin: 0 auto; /* centers the form on the screen horizontally. */
@@ -11,7 +44,7 @@
 /* Style for the input fields inside the login form. */
 .login-container input[type="text"],
 .login-container input[type="password"] {
-  width: 100%; /* takes the full width of its container, which is .login-container */
+  width: 50%;
   padding: 10px;
   margin: 10px 0;
   border: 1px solid #ccc; /* light gray border. */
@@ -54,4 +87,9 @@
   border-radius: 5px; /* Rounded corners for aesthetics */
   box-shadow: 0 5px 15px rgba(0,0,0,0.5); /* A bit of shadow for depth */
   text-align: center; /* Center the content within the modal */
+}
+.website-graphic {
+  max-width: 90%;  /* to keep the image consistent with your text's width */
+  height: auto;   /* maintain aspect ratio */
+  margin-bottom: 20px;  /* add some space between the graphic and the text */
 }
