--- a/petrax-frontend/src/app/log-in/log-in.component.html
+++ b/petrax-frontend/src/app/log-in/log-in.component.html
@@ -1,23 +1,26 @@
-<form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+<div class="center-container">
+     <div class="rectangle">
+         <div class="Rectangle17">
+             <img src="/assets/logos/PETraxlogoBlueBackground.png" alt="PETrax" class="website-graphic">
+         </div>
+            <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
 
-        <h2>Login</h2>
-        <div class="form-group">
+                <h2>Login</h2>
+                <div class="form-group">
 
-            <label for="contactEmail">Email</label>
-            <input type="text" id="contactEmail" name="contactEmail" [(ngModel)]="contactEmail" required class="form-control">
+                <label for="contactEmail">Email</label>
+                <input type="text" id="contactEmail" name="contactEmail" [(ngModel)]="contactEmail" required class="form-control">
 
-
-
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" [(ngModel)]="password" required class="form-control">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" [(ngModel)]="password" required class="form-control">
 
 
-            <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
+                <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
 
-        <button type="submit" [disabled]="!loginForm.valid">Login</button>
+            <button type="submit" [disabled]="!loginForm.valid">Login</button>
+                  </div>
+            </form>
     </div>
-</form>
-
 <div class="modal" *ngIf="showModal">
     <div class="modal-content">
         <h2>Login Successful</h2>
