--- a/petrax-frontend/src/app/register/register.component.html
+++ b/petrax-frontend/src/app/register/register.component.html
@@ -1,4 +1,5 @@
 <!--<head><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtSNbZXisyon_iyVc0zzReieqXRO0mXto&libraries=places"></script></head>-->
+<div class="rectangle">
 <h1>User Registration</h1>
 <!--commenting out for now-->
 <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtSNbZXisyon_iyVc0zzReieqXRO0mXto&libraries=places">-->
@@ -37,4 +38,4 @@
     <button (click)="navigateToLogin()">Login</button>
   </div>
 </div>
-
+</div>
