--- a/petrax-frontend/src/app/register/register.component.css
+++ b/petrax-frontend/src/app/register/register.component.css
@@ -1,3 +1,14 @@
+  .rectangle {
+      width: 800px;
+      max-height: 80%;
+      background: #B5BAB6;
+      padding: 60px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+  }
+
 .modal {
     position: fixed;
     top: 0;
