--- a/petrax-frontend/src/app/pet-profile/pet-profile.component.css
+++ b/petrax-frontend/src/app/pet-profile/pet-profile.component.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 1441px;
+  width: 100%;
   background: #F7F7F2;
 }
 
@@ -13,15 +13,14 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  max-width: 1200px; /* Adjust the max-width as needed */
   width: 100%;
 }
 
 .pet-profile-container {
   flex: 2;
   margin-right: 20px; /* Add some space between the pet profile and other content */
-  width: 1068px;
-  height: 1820px;
+  width: 100%;
+  max-width: 1200px;
   flex-shrink: 0;
   background: #B5BAB6;
   padding: 20px;
@@ -40,6 +39,7 @@
   border: 1px solid #ddd;
   padding: 10px;
   margin-bottom: 10px;
+  display: flex;
 }
 
 .profile-content {
@@ -61,7 +61,7 @@
 
 .petEmoji {
   font-size: 48px;
-  width: 80px;
+  width: 100%;
   height: 80px;
   line-height: 80px;
   border-radius: 50%;
@@ -87,13 +87,13 @@
 }
 
 .petName {
-  width: 525px;
+  width: 100%;
   height: 126px;
   flex-shrink: 0;
   border-radius: 5px;
   border: 3px solid #222E50;
   background: #1BB46F;
-  font-size: 18px;
+  font-size: 4vw;
 }
 
 .pet-list {
