--- a/petrax-frontend/src/app/log-in/log-in.component.css
+++ b/petrax-frontend/src/app/log-in/log-in.component.css
@@ -19,8 +19,8 @@
     flex: 1; /* Allow it to grow and consume available space */
     }
 .Rectangle17 {
-   width: 300px;
-   height: 156px;
+   width: 311px;
+   height: 181px;
    background: #D9D9D9;
    border-radius: 10px;
    border: 2.50px #F05D23 solid;
@@ -29,8 +29,8 @@
 .website-graphic {
   max-width: 100%;  /* to keep the image consistent with your text's width */
   height: auto;   /* maintain aspect ratio */
-  margin-bottom: 20px;  /* add some space between the graphic and the text */
-  align-items: center;
+  margin-bottom: 0px;  /* add some space between the graphic and the text */
+  border-radius: 5px; /* Rounded corners for aesthetics */
 }
 .login-container {
   max-width: 400px; /* constraining the form to 400 pixels width. */
@@ -50,12 +50,16 @@
   border: 1px solid #ccc; /* light gray border. */
   border-radius: 4px; /* slightly rounded corners for the input fields. */
 }
-
+.login.text{
+   font-size: 18px;
+   text-align: center;
+   max-width: 90%;  /* to prevent text from stretching too wide */
+}
 /* Style for the login button. */
-.login-container button {
+.submit-btn {
   width: 100%;
   padding: 10px;
-  background-color: #007BFF; /* Blue color, you can adjust to your preference. */
+  background-color: #222E50;
   color: #fff; /* White text color. */
   border: none;
   border-radius: 4px;
@@ -80,16 +84,11 @@
 }
 
 .modal-content {
-  width: 100%;
+  width: 50%;
   max-width: 500px; /* Or whatever width you desire */
   padding: 20px;
   background-color: #fff; /* White background for the modal content */
   border-radius: 5px; /* Rounded corners for aesthetics */
   box-shadow: 0 5px 15px rgba(0,0,0,0.5); /* A bit of shadow for depth */
   text-align: center; /* Center the content within the modal */
-}
-.website-graphic {
-  max-width: 90%;  /* to keep the image consistent with your text's width */
-  height: auto;   /* maintain aspect ratio */
-  margin-bottom: 20px;  /* add some space between the graphic and the text */
 }
