Tayler -- minor CSS edits, still not window responsive

--- a/petrax-frontend/src/app/navbar/navbar.component.html
+++ b/petrax-frontend/src/app/navbar/navbar.component.html
@@ -11,6 +11,7 @@
       <a class="navbar-item" routerLink="/user-profile">My Profile</a>
       <a class="navbar-item" routerLink="/calendar">Calendar</a>
       <a class="navbar-item" routerLink="/faq">FAQ</a>
+      <a class="navbar-item" routerLink="/pet-profile">Pet Profile</a>
     </ng-container>
   </div>
 </header>
