--- a/petrax-frontend/src/app/register/register.component.css
+++ b/petrax-frontend/src/app/register/register.component.css
@@ -9,6 +9,79 @@
       gap: 15px;
   }
 
+  .center-container {
+      width: 100%; /* take full width of its parent */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      flex: 1; /* Allow it to grow and consume available space */
+      }
+
+.h2 {
+    font-size: 20px;
+    text-align: left;
+    max-width: 90%;
+}
+
+.registration-text {
+    font-size: 18px;
+    text-align: center;
+    max-width: 90%;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.form-group label {
+    margin-bottom: 5px;
+}
+
+.form-group input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.register-container {
+  max-width: 400px; /* constraining the form to 400 pixels width. */
+  margin: 0 auto; /* centers the form on the screen horizontally. */
+  padding: 40px 20px; /* spacing around the form. */
+  box-shadow: 0 0 10px rgba(0,0,0,0.1); /* subtle shadow to lift the form up a bit. */
+  border-radius: 5px; /* rounded corners. */
+  background-color: #ffffff; /* white background. */
+}
+
+.register-container input[type="text"],
+.register-container input[type="text"],
+.register-container input[type="email"],
+.register-container input[type="password"],
+.register-container input[type="password"],
+.register-container input[type="text"] {
+  width: 50%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc; /* light gray border. */
+  border-radius: 4px; /* slightly rounded corners for the input fields. */
+}
+
+.submit-btn {
+  width: 100%;
+  padding: 10px;
+  background-color: #222E50;
+  color: #fff; /* White text color. */
+  border: 2px;
+  border-radius: 4px #1BB46F;
+  cursor: pointer;
+  margin-top: 10px;
+  text-align: center;
+}
+
 .modal {
     position: fixed;
     top: 0;
