--- a/petrax-frontend/src/app/register/register.component.html
+++ b/petrax-frontend/src/app/register/register.component.html
@@ -1,41 +1,41 @@
-<!--<head><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtSNbZXisyon_iyVc0zzReieqXRO0mXto&libraries=places"></script></head>-->
-<div class="rectangle">
-<h1>User Registration</h1>
-<!--commenting out for now-->
-<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtSNbZXisyon_iyVc0zzReieqXRO0mXto&libraries=places">-->
+<div class="center-container">
+    <div class="rectangle">
+        <div class="registration-text">
+            <form (ngSubmit)="onSubmit()" #registrationForm="ngForm">
+                <h2>User Registration</h2>
+                <div class="form-group">
+                    <label for="firstName">First Name:</label>
+                    <input type="text" id="firstName" name="firstName" [(ngModel)]="firstName" required>
 
-<form (ngSubmit)="onSubmit()" #registrationForm="ngForm">
-  <label for="firstName">First Name:</label>
-  <input type="text" id="firstName" name="firstName" [(ngModel)]="firstName" required><br>
+                    <label for="lastName">Last Name:</label>
+                    <input type="text" id="lastName" name="lastName" [(ngModel)]="lastName" required>
 
-  <label for="lastName">Last Name:</label>
-  <input type="text" id="lastName" name="lastName" [(ngModel)]="lastName" required><br>
+                    <label for="contactEmail">Email:</label>
+                    <input type="email" id="contactEmail" name="contactEmail" [(ngModel)]="contactEmail" required>
 
-  <label for="contactEmail">Email:</label>
-  <input type="email" id="contactEmail" name="contactEmail" [(ngModel)]="contactEmail" required><br>
+                    <label for="password">Password: *must be at least 6 characters</label>
+                    <input type="password" id="password" name="password" [(ngModel)]="password" required>
 
-  <label for="password">Password: *must be at least 6 characters</label>
-  <input type="password" id="password" name="password" [(ngModel)]="password" required><br>
+                    <label for="verifyPassword">Confirm Password:</label>
+                    <input type="password" id="verifyPassword" name="verifyPassword" [(ngModel)]="verifyPassword" required>
 
-  <label for="verifyPassword">Confirm Password:</label>
-  <input type="password" id="verifyPassword" name="verifyPassword" [(ngModel)]="verifyPassword" required><br>
+                    <label for="address">Address:</label>
+                    <input type="text" id="address" name="address" [(ngModel)]="address" required autocomplete="off">
+                    <!-- Add a new <div> for the autocomplete input -->
+                    <div id="autocomplete"></div>
 
-  <label for="address">Address:</label>
-<input type="text" id="address" name="address" [(ngModel)]="address" required autocomplete="off">
-<!-- Add a new <div> for the autocomplete input -->
-<div id="autocomplete"></div>
+                    <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
 
-  <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
-
-  <input type="submit" value="Register" [disabled]="!registrationForm.valid">
-
-</form> 
-
-<div class="modal" *ngIf="showModal">
-  <div class="modal-content">
-    <h2>Registration Successful</h2>
-    <p>You have successfully registered! Please click below to login.</p>
-    <button (click)="navigateToLogin()">Login</button>
-  </div>
-</div>
+                    <input class="submit-btn" value="Register" [disabled]="!registrationForm.valid">
+                </div>
+            </form>
+        </div>
+        <div class="modal" *ngIf="showModal">
+            <div class="modal-content">
+                <h2>Registration Successful</h2>
+                <p>You have successfully registered! Please click below to login.</p>
+                <button (click)="navigateToLogin()">Login</button>
+            </div>
+        </div>
+    </div>
 </div>
