--- a/petrax-frontend/src/app/landing-page/landing-page.component.html
+++ b/petrax-frontend/src/app/landing-page/landing-page.component.html
@@ -4,8 +4,10 @@
                 <h1>Welcome, UserName</h1>
             </div>
             <div class="profile-link">
-                <h2><a >My Profile</a></h2> 
-        </div>
+                <button (click)="navigateToProfile()">My Profile</button>    
+                <button (click)="navigateToProfessionals()">View Care Professionals</button>             
+            </div>
+        
 
     <!-- Diplay Links to pet profiles -->
     <!-- Needs: 
