--- a/petrax-frontend/src/app/user/user-profile/user-profile.component.html
+++ b/petrax-frontend/src/app/user/user-profile/user-profile.component.html
@@ -9,15 +9,37 @@
             </div>
         </div>
 
-        <div class="info-container">
+        <!-- <div class="info-container">
             <h2>My Care Professionals</h2>
             <div>
-                
-                <app-care-professional class="professional-list"></app-care-professional>
+                <app-care-professional class="professional-list"></app-care-professional> -->
+                <!-- <table class="table table-striped">
+                    <thead>
+                      <tr>
+                        <th>Professional Information</th>
+                        <th>Actions</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let professional of professionals">
+                        <td>
+                          <div class="professional-info">
+                            <p><strong>Care Type:</strong> {{ professional.careType }}</p>
+                            <p><strong>Name:</strong> {{ professional.name }}</p>
+                            <p><strong>Business Name:</strong> {{ professional.businessName }}</p>
+                            <p><strong>Website:</strong> {{ professional.website }}</p>
+                            <p><strong>Phone Number:</strong> {{ professional.phoneNumber }}</p>
+                          </div>
+                        </td>
+                        <td>
+                          <button (click)="updateProfessional(professional.id)" class="btn btn-info">Update</button>
+                          <button (click)="deleteProfessional(professional.id)" class="btn btn-danger" style="margin-top: 10px">Delete</button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
             </div>
-            <div>
-                <button (click)="navigateToAddProfessional()">Add New Professional</button>
-            </div>
+            
         </div>
     </div>
-</div>
+</div>  -->
